--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "circular-json": "^0.5.9",
     "firebase": "^7.15.5",
     "jest": "^24.9.0",
     "moment": "^2.27.0",
@@ -48,6 +49,9 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4"
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "mock-local-storage": "^1.1.12",
+    "moxios": "^0.4.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
